Wrapped component app-header

--- a/src/app/components/navbar/navbar-slim/navbar-slim.component.html
+++ b/src/app/components/navbar/navbar-slim/navbar-slim.component.html
@@ -3,7 +3,7 @@
 }
 
 <div #dropdownDetails class="dropdown lg:hidden absolute top-4 left-4 z-50">
-  <button (click)="toggleDropdown()" class="btn btn-circle text-stone-300">
+  <button (click)="toggleDropdown()" class="btn text-stone-300 glass rounded-full">
     @if(isDropdownOpen){
     <!-- close icon -->
     <i class="fa-solid fa-xmark  fa-xl"></i>
