--- a/src/app/pages/about/experience/experience.component.html
+++ b/src/app/pages/about/experience/experience.component.html
@@ -1,5 +1,5 @@
-<article class="collapse collapse-arrow bg-base-200 bg-opacity-25">
-  <input type="radio" name="my-experiences"/>
+<article class="collapse collapse-arrow glass">
+  <input type="radio" name="my-experiences" [checked]="checked"/>
   <p class="text-md flex flex-col collapse-title">
     <span class="flex flex-col lg:flex-row flex-1 justify-between">
       <span class="uppercase font-bold text-lg order-2 lg:order-1">
