--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -1,8 +1,8 @@
 <app-hero imagePath="assets/img/Contacts.png">
-  <h1 class="text-6xl uppercase font-extrabold black-ops-one-regular flex flex-col lg:flex-row text-end lg:text-start h-32 lg:h-16">
-    <span>My </span>
-    <span class="bg-clip-text text-transparent bg-gradient-to-r from-red-600 to-red-900">contacts</span>
-  </h1>
+  <app-header>
+    <span white>My </span>
+    contacts
+  </app-header>
 
   <ul class="flex flex-col lg:grid lg:grid-cols-4 lg:grid-rows-2 gap-4 lg:gap-8 h-full">
     <li class="glass p-4 lg:p-8 flex flex-col gap-2 lg:gap-4 justify-center items-center order-3 lg:order-2">
