--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,13 +1,13 @@
 <app-hero imagePath="assets/img/About.png">
-  <h1 class="text-stone-300 text-6xl uppercase font-extrabold black-ops-one-regular flex flex-col lg:flex-row text-end lg:text-start h-32 lg:h-16">
-    <span>Gianluca </span>
-    <span class="bg-clip-text text-transparent bg-gradient-to-r from-red-600 to-red-900">Spadazzi</span>
-  </h1>
+ <app-header>
+    <span white>Gianluca </span>
+    Spadazzi
+  </app-header>
 
   <div class="flex flex-col lg:flex-row gap-8">
     <section class="flex-1 lg:overflow-y-auto lg:max-h-[calc(100vh-16rem-3rem)] relative">
       <img src="assets/img/Me_red.png" alt="This is me!"
-        class="h-60 mr-4 opacity-60 place-self-center lg:place-content-start float-none lg:float-left rounded-xl">
+        class="h-60 mr-4 opacity-70 place-self-center lg:place-content-start float-none lg:float-left rounded-xl">
 
       <div class="">
         <app-assert-item key="a_who"></app-assert-item>
@@ -16,7 +16,7 @@
 
     <section class="flex-1 flex flex-col gap-2 lg:overflow-y-auto lg:max-h-[calc(100vh-16rem-3rem)] lg:pr-4">
       @for(exp of experiences; track exp.id){
-      <app-experience [experience]="exp" />
+      <app-experience [experience]="exp" [checked]="$first"/>
       }
     </section>
   </div>
