--- a/src/app/pages/projects/project-button/project-button.component.html
+++ b/src/app/pages/projects/project-button/project-button.component.html
@@ -1,7 +1,7 @@
 <button class="glass px-4 py-2 flex flex-col items-center hover:scale-105 w-full lg:w-64 group text-stone-300" (click)="openCarousel()">
   <p class="font-mono uppercase text-lg truncate w-[calc(16rem-2rem)]">{{project.name}}</p>
 
-  <div class="divider m-0"></div>
+  <div class="divider m-0 before:bg-stone-300 after:bg-stone-300"></div>
 
   <section class="flex flex-row gap-3 grayscale-[90%] group-hover:grayscale-0 ">
     @for(tech of project.stack; track tech){
