--- a/src/app/pages/projects/projects-carousel/projects-carousel.component.html
+++ b/src/app/pages/projects/projects-carousel/projects-carousel.component.html
@@ -1,4 +1,10 @@
-<div class="carousel w-full h-full lg:h-fit">
+<button (click)="closeCarousel()"
+  class="float-right lg:hidden btn btn-circle border-transparent bg-transparent hover:border-transparent hover:bg-transparent hover:scale-95 text-stone-300">
+  <i class="fa-solid fa-xmark fa-2xl"></i>
+</button>
+
+<div class="carousel w-full h-full lg:h-fit gap-4">
+
   @for (project of projects; track project.id) {
   <ng-container
     *ngTemplateOutlet="carouselItem; context: {project, back:getBackId($index), ahead:getAheadId($index)}"></ng-container>
@@ -11,23 +17,6 @@
       class="w-full h-full relative opacity-0" />
 
     <article class="w-full absolute top-0 p-4 lg:py-12 lg:px-24 h-fit lg:h-full glass flex flex-col gap-4">
-      <div class="sticky top-0 flex lg:hidden flex-row justify-between glass rounded-full">
-        <a [href]="'projects#'+back"
-          class="btn btn-circle bg-neutral-content hover:bg-neutral-content hover:scale-95 text-black">
-          <i class="fa-solid fa-caret-left fa-2xl"></i>
-        </a>
-
-        <button (click)="closeCarousel()"
-          class="btn btn-circle border-transparent bg-transparent hover:border-transparent hover:bg-transparent hover:scale-95 text-stone-300">
-          <i class="fa-solid fa-xmark fa-2xl"></i>
-        </button>
-
-        <a [href]="'projects#'+ahead"
-          class="btn btn-circle bg-neutral-content hover:bg-neutral-content hover:scale-95 text-black">
-          <i class="fa-solid fa-caret-right fa-2xl"></i>
-        </a>
-      </div>
-
       <p class="flex flex-col">
         <span class="text-2xl font-mono uppercase font-semibold">{{project.name}}</span>
         <span class="flex flex-col lg:flex-row text-sm font-mono text-stone-300 lg:gap-4">
@@ -44,7 +33,8 @@
       <div class="flex flex-col lg:flex-row flex-1 gap-4 lg:gap-0">
         <p class="flex-1 order-3 lg:order-1">{{project.description}}</p>
 
-        <section class="divider lg:divider-horizontal before:bg-neutral-content after:bg-neutral-content opacity-50 order-1 lg:order-2 m-0">
+        <section
+          class="divider lg:divider-horizontal before:bg-stone-300 after:bg-stone-300 opacity-50 order-1 lg:order-2 m-0">
         </section>
 
         <section class="lg:w-1/5 flex flex-col justify-between font-mono order-2 lg:order-3 gap-8 lg:gap-0">
