Insert link to change project

--- a/src/app/components/navbar/framework-icon/framework-icon.component.html
+++ b/src/app/components/navbar/framework-icon/framework-icon.component.html
@@ -1,7 +1,19 @@
 <li class="flex lg:items-center h-full">
-  <button [title]="title" [disabled]="disabled"
-    class="grayscale disabled:grayscale-0 disabled:opacity-50 hover:-translate-y-1 hover:grayscale-0 disabled:hover:translate-y-0 disabled:hover:cursor-not-allowed disabled:border-b-2 py-1 rounded-none">
-    <ng-content select="img"></ng-content>
+  @if(link){
+  <a [title]="title" [href]="calcHref()" rel="noopener"
+    class="grayscale hover:-translate-y-1 hover:grayscale-0 py-1 rounded-none flex flex-row gap-2">
+    <ng-container *ngTemplateOutlet="element"></ng-container>
+    <span class="lg:hidden">{{title}}</span>
+  </a>
+  }
+  @else {
+  <button [title]="title" disabled class="grayscale-0 opacity-50 cursor-not-allowed border-b-2 py-1 rounded-none flex flex-row gap-2">
+    <ng-container *ngTemplateOutlet="element"></ng-container>
     <span class="lg:hidden">{{title}}</span>
   </button>
+  }
 </li>
+
+<ng-template #element>
+  <ng-content></ng-content>
+</ng-template>
