--- a/src/app/components/navbar/navbar-slim/navbar-slim.component.html
+++ b/src/app/components/navbar/navbar-slim/navbar-slim.component.html
@@ -28,24 +28,24 @@
       <button (click)="navigate('contacts')" class="text-lg font-semibold" routerLink="contacts"
         routerLinkActive="underline underline-offset-2">Contacts</button>
     </li>
-    <!-- <li class="h-8">
+    <li class="h-8">
         <a></a>
       </li>
       <li>
         <a>Show in:</a>
         <ul class="p-2 flex flex-col gap-4">
-          <app-framework-icon [disabled]="true" title="Angular">
-            <img src="assets/svg/angular.svg" alt="Angular">
+          <app-framework-icon title="Angular">
+            <img src="assets/svg/angular.svg" alt="Angular" class="h-5">
           </app-framework-icon>
 
-          <app-framework-icon title="React">
+          <app-framework-icon title="React" link="https://my-portfolio-next-gamma.vercel.app">
             <img src="assets/svg/react.svg" alt="React" class="h-5">
           </app-framework-icon>
 
-          <app-framework-icon title="Vue.js">
+          <!-- <app-framework-icon title="Vue.js">
             <img src="assets/svg/vue.svg" alt="Vue.js" class="h-5">
-          </app-framework-icon>
+          </app-framework-icon> -->
         </ul>
-      </li> -->
+      </li>
   </ul>
 </div>
