--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,23 +1,19 @@
 <nav class="flex justify-start lg:justify-end items-center p-5 bg-transparent z-20 relative text-stone-300">
-  <!-- <ul class="hidden lg:flex space-x-4 text-lg text-white align-middle">
+  <ul class="hidden lg:flex space-x-4 text-lg text-white align-middle">
     <li>Show in:</li>
 
-    <app-framework-icon [disabled]="true" title="Angular">
-      <img src="assets/svg/angular.svg" alt="Angular">
+    <app-framework-icon title="Angular">
+      <img src="assets/svg/angular.svg" alt="Angular" class="h-5"/>
     </app-framework-icon>
 
-    <app-framework-icon title="React">
-      <img src="assets/svg/react.svg" alt="React" class="h-5">
+    <app-framework-icon title="React" link="https://my-portfolio-next-gamma.vercel.app">
+      <img src="assets/svg/react.svg" alt="React" class="h-5"/>
     </app-framework-icon>
 
-    <app-framework-icon title="Vue.js">
+    <!-- <app-framework-icon title="Vue.js">
       <img src="assets/svg/vue.svg" alt="Vue.js" class="h-5">
-    </app-framework-icon>
-  </ul> -->
-
-  <!-- @if(isDropdownOpen){
-  <div class="lg:hidden absolute top-0 left-0 w-screen h-screen bg-transparent z-20" (pointerdown)="closeDropdown()"></div>
-  } -->
+    </app-framework-icon> -->
+  </ul>
 
   <app-navbar-slim/>
 </nav>
