--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -16,7 +16,7 @@
 
     <section class="flex-1 flex flex-col gap-2 lg:overflow-y-auto lg:max-h-[calc(100vh-16rem-3rem)] lg:pr-4">
       @for(exp of experiences; track exp.id){
-      <app-experience [experience]="exp" [checked]="$first"/>
+      <app-experience [experience]="exp"/>
       }
     </section>
   </div>
