Add supabasae db

--- a/src/app/pages/about/experience/experience.component.html
+++ b/src/app/pages/about/experience/experience.component.html
@@ -7,10 +7,10 @@
       </span>
 
       <span class="order-1 lg:order-2">
-        {{experience?.whenFrom}} - {{experience?.whentTo}}
+        {{experience?.whenFrom}} - {{experience?.whenTo}}
       </span>
     </span>
-    <span class="font-semibold font-mono"> {{experience?.where}}
+    <span class="font-semibold font-mono"> {{experience?.location}}
     </span>
   </p>
 
