Enhance About page data handling by integrating resolver for experiences and about sections, updating components to utilize new data structure, and adding logging for data loading status.

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -10,7 +10,7 @@
         class="h-60 mr-4 opacity-70 place-self-center lg:place-content-start float-none lg:float-left rounded-xl">
 
       <div class="">
-        <app-assert-item key="a_who"></app-assert-item>
+        <app-assert-item [key]="'a_who'" [about]="about"></app-assert-item>
       </div>
     </section>
 
